--- a/assets/css/ad.css
+++ b/assets/css/ad.css
@@ -1,23 +1,22 @@
-#superbanner {
+html.nik #superbanner {
 	width: 728px;
     height: 90px;
-	/* margin: 10px auto ; */
     background: rgba(0,0,0,0.1);
     border-radius: 5px;
     overflow: hidden;
 }
 
-.widget div{
+html.nik .widget div{
 	text-align: center;
 	margin: 0 auto;
 }
 
-.widget .textwidget {
+html.nik .widget .textwidget {
     width: 300px;
     margin: 20px auto;
     text-align: center;
 }
 
-.widget ul li{
+html.nik .widget ul li{
 	text-align: left;
 }
