--- a/assets/css/nik_4k.css
+++ b/assets/css/nik_4k.css
@@ -1,495 +1,460 @@
-/* // 4k devices (ultra HD, 2600px and up) */
+/*  =====================================================
+        4k devices (ultra HD, 2600px and up)
+    ===================================================== */
+
 @media (min-width: 2560px) {
-	
-		html{
+	/*  =====================================================
+        GENERAL FUNCTIONS
+    ===================================================== */
+	html.nik {
 		margin: 0;
-    	padding: 0;
-	    width: 100%;
-	    min-width: fit-content;
-    	height: auto;
-    	min-height: fit-content;
-	    margin-top: 0px !important;
-	}       
-
-	body{
-		/*
 		padding: 0;
-		margin: 0;
-	    padding-top: 34px;
-	    */
-	    display: block;
-	    width: 100%;
-	    height: 100%;
-	    font-size: 16px;
-	    background-size: 100vw 100vh;
-	    padding-top: 50px;
+		width: 100%;
+		min-width: fit-content;
+		height: auto;
+		min-height: fit-content;
+		margin-top: 0px !important;
 	}
-
-	div#wpadminbar {
-	    display: none;
+	html.nik body {
+		display: block;
+		width: 100%;
+		height: 100%;
+		font-size: 16px;
+		background-size: 100vw 100vh;
+		padding-top: 50px;
 	}
-	a, a:visited, a:hover, a:focus{
-	    font-size: inherit;
+	html.nik a,
+	html.nik a:visited,
+	html.nik a:hover,
+	html.nik a:focus {
+		font-size: inherit;
 	}
-	.blog a, .blog a:visited, .blog a:hover, .blog a:focus{
-	    font-size: inherit;
+	html.nik .blog a,
+	html.nik .blog a:visited,
+	html.nik .blog a:hover,
+	html.nik .blog a:focus {
+		font-size: inherit;
 	}
-	.archive a, .archive a:visited, .archive a:hover, .archive a:focus{
-	    font-size: inherit;
+	html.nik .archive a,
+	html.nik .archive a:visited,
+	html.nik .archive a:hover,
+	html.nik .archive a:focus {
+		font-size: inherit;
 	}
-
-	.home a, .home a:visited, .home a:hover, .home a:focus{
-	    font-size: inherit;
+	html.nik .home a,
+	html.nik .home a:visited,
+	html.nik .home a:hover,
+	html.nik .home a:focus {
+		font-size: inherit;
 	}
-
-	.page a, .page a:visited, .page a:hover, .page a:focus{
-	    font-size: inherit;
+	html.nik .page a,
+	html.nik .page a:visited,
+	html.nik .page a:hover,
+	html.nik .page a:focus {
+		font-size: inherit;
 	}
-	.single a, .single a:visited, .single a:hover, .single a:focus{
-	    font-size: inherit;
+	html.nik .single a,
+	html.nik .single a:visited,
+	html.nik .single a:hover,
+	html.nik .single a:focus {
+		font-size: inherit;
 	}
-	button, .btn, input[type=button]{
-	  	font-size: inherit;
+	html.nik button,
+	html.nik .btn,
+	html.nik input[type=button] {
+		font-size: inherit;
 	}
-	button:focus, .btn:focus, input[type=button]:focus{
-	    font-size: inherit;
+	html.nik button:focus,
+	html.nik .btn:focus,
+	html.nik input[type=button]:focus {
+		font-size: inherit;
 	}
-	button.selected:focus, .btn.selected:focus, input[type=button].selected:focus{
-	    font-size: inherit;
+	html.nik button.selected:focus,
+	html.nik .btn.selected:focus,
+	html.nik input[type=button].selected:focus {
+		font-size: inherit;
 	}
-	.main-wrapper{
+	html.nik .main-wrapper {
 		margin: 0 auto;
 		/* max-width: 2560px; */
 	}
-
-	.main-container{
+	html.nik .main-container {
 		margin: 0 auto;
 		width: 2560px;
 	}
-	section {
-	    margin: 30px 0;
+	html.nik section {
+		margin: 30px 0;
 	}
-
-
 	/*	=====================================================
 			FEATURED HEADER 
 		===================================================== */
-
-	#main-featured-content{
-	    width: 100%;
+	html.nik #main-featured-content {
+		width: 100%;
 	}
-
-	#featured-posts {
-	    width: 100%;
+	html.nik #featured-posts {
+		width: 100%;
 	}
-	#header-featured-col-left{
+	html.nik #header-featured-col-left {
 		width: 728px;
 		float: left;
 	}
-	#header-featured-post-bot-left{
+	html.nik #header-featured-post-bot-left {
 		width: 364px;
 		height: 200px;
 		float: left;
 	}
-	#header-featured-post-bot-right{
+	html.nik #header-featured-post-bot-right {
 		width: 364px;
 		height: 200px;
 		float: right;
 	}
-	#header-featured-col-right{
+	html.nik #header-featured-col-right {
 		width: 412px;
 		float: right;
 	}
-	#header-featured-post-right-main{
+	html.nik #header-featured-post-right-main {
 		width: 412px;
 		height: 290px;
 		float: right;
 	}
-
-
-
 	/*	=====================================================
 			SIDEBAR 
 		===================================================== */
-	#main-sidebar{ 
+	html.nik #main-sidebar {
 		float: right;
 		width: 412px;
 		height: auto;
 	}
-	#sidebar aside {
-	    margin: 30px 0;
+	html.nik #sidebar aside {
+		margin: 30px 0;
 	}
-	#sidebar aside:first-child{
+	html.nik #sidebar aside:first-child {
 		margin-top: 0;
 	}
-	#sidebar aside:last-child{
+	html.nik #sidebar aside:last-child {
 		margin-bottom: 0;
 	}
-	#sidebar .widget {
-	    padding-bottom: 20px;
+	html.nik #sidebar .widget {
+		padding-bottom: 20px;
 	}
-	#sidebar .widget-title {
-	    width: 100%;
-	    height: 40px;
-	    font-size: 1.2em;
-	    padding: 5px;
+	html.nik #sidebar .widget-title {
+		width: 100%;
+		height: 40px;
+		font-size: 1.2em;
+		padding: 5px;
 	}
-	#sidebar ul ul, #sidebar ol ol{
+	html.nik #sidebar ul ul,
+	html.nik #sidebar ol ol {
 		padding: 0;
-	    margin: 0;
+		margin: 0;
 	}
-	ul li, ol li {
-	    margin: 5px 0;
-	    padding: 0 20px;
+	html.nik ul li,
+	html.nik ol li {
+		margin: 5px 0;
+		padding: 0 20px;
 	}
-
-
-
 	/*  =====================================================
 	        HEADER
 	    ===================================================== */
-
-	.brand-holder {
-	    height: 50px;
-	    width: auto;
+	html.nik .brand-holder {
+		height: 50px;
+		width: auto;
 	}
-
-	#site-brand {
-	    height: 72px;
-	    width: 72px;
-	    position: relative;
-	    top: -10px;
+	html.nik #site-brand {
+		height: 72px;
+		width: 72px;
+		position: relative;
+		top: -10px;
 	}
-
-	.navbar-nav {
-	    font-size: 20px;
+	html.nik .navbar-nav {
+		font-size: 20px;
 	}
-
-	.navbar-nav ul li{
-	    padding: 0;
+	html.nik .navbar-nav ul li {
+		padding: 0;
 	}
-
-	.navbar-nav a.nav-link{
-	    padding: 0;
+	html.nik .navbar-nav a.nav-link {
+		padding: 0;
 	}
-
-
 	/*  =====================================================
 	        MAIN CONTENT 
 	    ===================================================== */
-
-	#main-content{
-	    float: left;
-	    width: 728px;
-	    min-height: 200px;
+	html.nik #main-content {
+		float: left;
+		width: 728px;
+		min-height: 200px;
 	}
-
-
 	/*	=====================================================
 			FOOTER
 		===================================================== */
-	footer{
-	    min-height: 300px;
-	    position: relative;
-	    left: 0;
-	    right: 0;
-	    bottom: -16px;
-	    z-index: 1030;
+	html.nik footer {
+		min-height: 300px;
+		position: relative;
+		left: 0;
+		right: 0;
+		bottom: -16px;
+		z-index: 1030;
 	}
-
-
-
 	/*	=====================================================
 			POSTS
 		===================================================== */
-	.post {
-	    min-height: 200px;
-	    width: 100%;
-	    margin: 15px 0 30px 0;
+	html.nik .post {
+		min-height: 200px;
+		width: 100%;
+		margin: 15px 0 30px 0;
 	}
-
-	.post:first-child {
-	    display: block;
-	    margin-top: 0;
+	html.nik .post:first-child {
+		display: block;
+		margin-top: 0;
 	}
-	.post a {
-	    min-height: 200px;
+	html.nik .post a {
+		min-height: 200px;
 	}
-
-	.post p {
-	    /* display:none; */
+	html.nik .post p {
+		/* display:none; */
 	}
-
-	.post-title {
-	    display: block;
-	    max-height: 145px;
-	    width: 100%;
-	    padding: 15px;
-	    font-size: 1.3rem;
+	html.nik .post-title {
+		display: block;
+		max-height: 145px;
+		width: 100%;
+		padding: 15px;
+		font-size: 1.3rem;
 	}
-
-	.post-content{
-	    width: 100%;
-	    padding: 5px;
-	    display: block;   
+	html.nik .post-content {
+		width: 100%;
+		padding: 5px;
+		display: block;
 	}
-	.post-category {
-	    position: relative;
-	    display: block;
-	    bottom: 0px;
-	    width: 100%;
-	    height: 30px;
-	    padding: 5px 15px;
-	    text-align: right;
-	    font-size: 0.8em;
+	html.nik .post-category {
+		position: relative;
+		display: block;
+		bottom: 0px;
+		width: 100%;
+		height: 30px;
+		padding: 5px 15px;
+		text-align: right;
+		font-size: 0.8em;
 	}
-	.post .author {
-	    display: block;
-	    padding: 7.5px 30px;
-	    max-width: 354px;
-	    max-height: 160px;
+	html.nik .post .author {
+		display: block;
+		padding: 7.5px 30px;
+		max-width: 354px;
+		max-height: 160px;
 	}
-
-	.post .author-info{
-	    /* padding: 7.5px 30px; */
-	    font-size: 0.8em;
+	html.nik .post .author-info {
+		/* padding: 7.5px 30px; */
+		font-size: 0.8em;
 	}
-
-	.post .author-data {
-	    display: block;
+	html.nik .post .author-data {
+		display: block;
 	}
-	.post .author-image {
-	    display: block;
-	    width: 80px;
-	    height: 80px;
+	html.nik .post .author-image {
+		display: block;
+		width: 80px;
+		height: 80px;
 	}
-	.post .author-quote {
+	html.nik .post .author-quote {
 		width: fit-content;
-    	margin: 0 auto;
-	    padding: 1em 0.5em;
-	    line-height: 1.5em;
-	    max-height: 140px;
+		margin: 0 auto;
+		padding: 1em 0.5em;
+		line-height: 1.5em;
+		max-height: 140px;
 	}
-	.post .quote {
-	    position: relative;
-	    top: 0px;
-	    width: 190px;
-	    height: auto;
-	    min-height: 80px;
-	    max-height: 140px;
+	html.nik .post .quote {
+		position: relative;
+		top: 0px;
+		width: 190px;
+		height: auto;
+		min-height: 80px;
+		max-height: 140px;
 	}
-	.post .quote::after{
-	    position: absolute;
-	    width: 0;
-	    height: 0;
-	    top: 40px;
-	    left: -20px;
-	    right: auto;
-	    bottom: auto;
-	    border: 12px solid;
+	html.nik .post .quote::after {
+		position: absolute;
+		width: 0;
+		height: 0;
+		top: 40px;
+		left: -20px;
+		right: auto;
+		bottom: auto;
+		border: 12px solid;
 	}
-	.post .col:first-child{
-	    padding-right: 0;
+	html.nik .post .col:first-child {
+		padding-right: 0;
 	}
-	.post .col:last-child{
-	    padding-left: 0;
+	html.nik .post .col:last-child {
+		padding-left: 0;
 	}
-	.post:first-child {
-	    margin: 0;
+	html.nik .post:first-child {
+		margin: 0;
 	}
-	.post::last-child {
-	    margin-bottom: 0;
+	html.nik .post::last-child {
+		margin-bottom: 0;
 	}
-	.post .post-content-wrapper{
-	    max-height: 320px;
+	html.nik .post .post-content-wrapper {
+		max-height: 320px;
 	}
-	.post .blog-featured-image {
-	    min-height: 320px;
-	    max-height: 320px;
+	html.nik .post .blog-featured-image {
+		min-height: 320px;
+		max-height: 320px;
 	}
-	.post .post-content-wrapper .post-content{
-	    max-height: 229px;
+	html.nik .post .post-content-wrapper .post-content {
+		max-height: 229px;
 	}
-	.post .post-content-wrapper .post-content p{
-	    display: none;
-	    padding:10px;
-	    margin: 0;
+	html.nik .post .post-content-wrapper .post-content p {
+		display: none;
+		padding: 10px;
+		margin: 0;
 	}
-	.post .post-content-wrapper .post-content p:first-child{
-	    display: block;
+	html.nik .post .post-content-wrapper .post-content p:first-child {
+		display: block;
 	}
-
-	.post .post-content-wrapper .post-category{
-	    position: absolute;
-	    display: block;
-	    bottom: 0px;
-	    right: 15px;
-	    width: 364px;
-	    height: 30px;
-	    font-size: 0.8em;
+	html.nik .post .post-content-wrapper .post-category {
+		position: absolute;
+		display: block;
+		bottom: 0px;
+		right: 15px;
+		width: 364px;
+		height: 30px;
+		font-size: 0.8em;
 	}
-
-
 	/*  =====================================================
 	        SINGLE POSTS
 	    ===================================================== */
-	.single-post .post-featured-image {
-	    min-height: 320px;
-	    max-height: 320px;
+	html.nik .single-post .post-featured-image {
+		min-height: 320px;
+		max-height: 320px;
 	}
-
-	.single-post .post-header {
-	    margin: 0 15px;
+	html.nik .single-post .post-header {
+		margin: 0 15px;
 	}
-	.single-post .post-content {
-	    margin: 0 15px;
-	    padding: 60px 30px;
-	    width: auto;
+	html.nik .single-post .post-content {
+		margin: 0 15px;
+		padding: 60px 30px;
+		width: auto;
 	}
-	.single-post .post-content p {
-	    width: 100%;
+	html.nik .single-post .post-content p {
+		width: 100%;
 	}
-	.single-post .post-category {
-	    width: auto;
-	    top: 229px;
+	html.nik .single-post .post-category {
+		width: auto;
+		top: 229px;
 	}
-	.single-post .post-footer {
-	    padding: 30px 20px;
+	html.nik .single-post .post-footer {
+		padding: 30px 20px;
 	}
-
-	.single-post .author {
-	    min-width: 420px;
-	    max-width: 420px;
+	html.nik .single-post .author {
+		min-width: 420px;
+		max-width: 420px;
 	}
-
-	.single-post .author-image {
-	    display: block;
-	    width: 80px;
-	    height: 80px;
+	html.nik .single-post .author-image {
+		display: block;
+		width: 80px;
+		height: 80px;
 	}
-
-	.single-post .author-quote {
-	    padding: 1em;
-	    line-height: 1.5em;
-	    max-height: 140px;
+	html.nik .single-post .author-quote {
+		padding: 1em;
+		line-height: 1.5em;
+		max-height: 140px;
 	}
-
-	.single-post .quote {
-	    position: relative;
-	    top: 0px;
-	    width: 250px;
-	    height: auto;
+	html.nik .single-post .quote {
+		position: relative;
+		top: 0px;
+		width: 250px;
+		height: auto;
 	}
-
-	.single-post .quote::after{
-	    position: absolute;
-	    width: 0;
-	    height: 0;
-	    top: 40px;
-	    left: -20px;
-	    right: auto;
-	    bottom: auto;
+	html.nik .single-post .quote::after {
+		position: absolute;
+		width: 0;
+		height: 0;
+		top: 40px;
+		left: -20px;
+		right: auto;
+		bottom: auto;
 	}
-	.single-post .author-info {
+	html.nik .single-post .author-info {
 		padding: 15px 30px 0 30px;
 	}
-
-
 	/*  =====================================================
 	        FEATURED POSTS
 	    ===================================================== */
-	.featured-double-wrapper{
-	    margin-top: 30px;   
+	html.nik .featured-double-wrapper {
+		margin-top: 30px;
 	}
-	.single-featured-post {
-	    width: 100%;
-	    min-height: 382px;
-	    max-height: 382px;
+	html.nik .single-featured-post {
+		width: 100%;
+		min-height: 382px;
+		max-height: 382px;
 	}
-	.single-featured-post a{
-	    min-height: 283px;
+	html.nik .single-featured-post a {
+		min-height: 283px;
 	}
-	.single-featured-image{
-	    min-height: 382px;
-	    max-height: 382px;
-	    margin-bottom: -30px;
+	html.nik .single-featured-image {
+		min-height: 382px;
+		max-height: 382px;
+		margin-bottom: -30px;
 	}
-	.double-featured-post {
-	    width: 100%;
-	    min-height: 262px;
-	    max-height: 262px;
-	    margin: 15px 0;
+	html.nik .double-featured-post {
+		width: 100%;
+		min-height: 262px;
+		max-height: 262px;
+		margin: 15px 0;
 	}
-
-	.double-featured-image{
-	    min-height: 262px;
-	    max-height: 262px;
-	    margin-bottom: -30px;
+	html.nik .double-featured-image {
+		min-height: 262px;
+		max-height: 262px;
+		margin-bottom: -30px;
 	}
-
-	.podcast-featured-post {
-	    width: 100%;
-	    min-height: 262px;
-	    margin: 15px 0;
+	html.nik .podcast-featured-post {
+		width: 100%;
+		min-height: 262px;
+		margin: 15px 0;
 	}
-	.podcast-featured-post:first-child {
-	       margin: 15px 0;
+	html.nik .podcast-featured-post:first-child {
+		margin: 15px 0;
 	}
-	.podcast-featured-post:last-child {
-	       margin: 15px 0;
+	html.nik .podcast-featured-post:last-child {
+		margin: 15px 0;
 	}
-	.podcast-featured-image{
-	    min-height: inherit;
-	    margin-bottom: -30px;
+	html.nik .podcast-featured-image {
+		min-height: inherit;
+		margin-bottom: -30px;
 	}
-
-
 	/*  =====================================================
 	        NEWS POSTS
 	    ===================================================== */
-	.news-post.post{
-	    width: 100%;
-	    min-height: 364px;
-	    height: 364px;
-	    margin: 15px 0;
+	html.nik .news-post.post {
+		width: 100%;
+		min-height: 364px;
+		height: 364px;
+		margin: 15px 0;
 	}
-
-	.news-post a{
-	    min-height: 364px;
+	html.nik .news-post a {
+		min-height: 364px;
 	}
-
-	.news-post .post-title{
-	    font-size: 1.5em;
+	html.nik .news-post .post-title {
+		font-size: 1.5em;
 	}
-
-	.news-post .float-post-content p{
-	    display: none;
-	    padding:10px;
-	    margin: 0;
+	html.nik .news-post .float-post-content p {
+		display: none;
+		padding: 10px;
+		margin: 0;
 	}
-	.news-post .float-post-content p:first-child{
-	    display: block;
+	html.nik .news-post .float-post-content p:first-child {
+		display: block;
 	}
-
-	.news-featured-image{
-	    min-height: inherit ;
-	    margin-bottom: -30px;
+	html.nik .news-featured-image {
+		min-height: inherit;
+		margin-bottom: -30px;
 	}
-
-
 	/*  =====================================================
 	        PODCAST POSTS
 	    ===================================================== */
-	#podcast-section a.img-link{
-	    min-height: 180px;
+	html.nik #podcast-section a.img-link {
+		min-height: 180px;
 	}
-
-
 	/*  =====================================================
 	        BLOG POSTS
 	    ===================================================== */
-	#blog-section a.img-link{
-	    min-height: 180px;
+	html.nik #blog-section a.img-link {
+		min-height: 180px;
 	}
-
 }
