--- a/assets/css/nik_extra_large.css
+++ b/assets/css/nik_extra_large.css
@@ -126,7 +126,7 @@
 		height: auto;
 	}
 	html.nik #sidebar aside {
-		margin: 30px 0;
+		margin: 0 0 30px 0;
 	}
 	html.nik #sidebar aside:first-child {
 		margin-top: 0;
