--- a/assets/css/nik_extra_large.css
+++ b/assets/css/nik_extra_large.css
@@ -83,8 +83,9 @@
 		width: 1140px;
 	}
 	html.nik section {
-		margin: 30px 0;
+		margin: 3em 0;
 	}
+
 	/*	=====================================================
 			FEATURED HEADER 
 		===================================================== */
@@ -135,7 +136,7 @@
 		margin-bottom: 0;
 	}
 	html.nik #sidebar .widget {
-		padding-bottom: 20px;
+		padding-bottom: 40px;
 	}
 	html.nik #sidebar .widget-title {
 		width: 100%;
