--- a/assets/css/nik_extra_small.css
+++ b/assets/css/nik_extra_small.css
@@ -112,7 +112,7 @@
 		padding: 0;
 	}
 	html.nik section {
-		margin: 15px 0;
+		margin: 2em 0;
 	}
 	html.nik #carousel-section {
 		display: none;
@@ -169,7 +169,7 @@
 		margin: 0 0 20px 0;
 	}
 	html.nik #sidebar .widget {
-		padding-bottom: 20px;
+		padding-bottom: 40px;
 	}
 	html.nik #sidebar .widget.widget_categories,
 	html.nik #sidebar .widget.widget_archive {
@@ -487,7 +487,7 @@
 	        FEATURED POSTS
 	    ===================================================== */
 	html.nik #featured-posts .single-featured-image {
-		min-height: 260px;
+		min-height: 285px;
 		max-height: 369px;
 	}
 	html.nik #featured-posts .post-category {
