--- a/assets/css/nik_medium.css
+++ b/assets/css/nik_medium.css
@@ -15,7 +15,7 @@
 		min-height: fit-content;
 		margin-top: 0px !important;
 	}
-	body {
+	html.nik body {
 		display: block;
 		width: 100%;
 		height: 100%;
@@ -91,7 +91,7 @@
 		padding: 0;
 	}
 	html.nik section {
-		margin: 30px 0;
+		margin: 2em 0;
 	}
 	html.nik #carousel-section {
 		display: none;
@@ -159,7 +159,7 @@
 		margin-bottom: 0;
 	}
 	html.nik #sidebar .widget {
-		padding-bottom: 20px;
+		padding-bottom: 40px;
 	}
 	html.nik #sidebar .widget.widget_categories,
 	html.nik #sidebar .widget.widget_archive {
